--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Dumebi Iwuchukwu",
   "short_name": "Dum3bi",
-  "theme_color": "#449cff",
+  "theme_color": "#f91e15",
   "background_color": "#000000",
   "display": "standalone",
   "Scope": "/",
