--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,24 @@
 ehthumbs.db
 Thumbs.db
 desktop.ini
-.DS_Store
-.DS_Store
 images/.DS_Store
 images/portfolio/.DS_Store
-.DS_Store
+
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules
+
+.sass-cache
