--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "dum3bi.com": "Dumebi-Iwuchukwu-personal-website",
+  "@Dum3bi/website": "dum3bi.com",
   "version": "1.0.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0"
